# yap_client

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  cli.rs  common.rs  main.rs  ui.rs
